Security: Remove secrets.h from tracking and add to .gitignore
- Uncommented secrets.h in .gitignore to prevent tracking
- Removed firmware/GrowSenseModule/secrets.h from git tracking
- Deleted website/README.md (cleanup)

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ device_keys.json
 firebase-credentials.json
 
 # Firmware secrets (keep secrets.h.example, ignore actual secrets.h if it has real credentials)
-# firmware/GrowSenseModule/secrets.h
+firmware/GrowSenseModule/secrets.h
 
 # IDE
 .vscode/
