Add production-ready ESP32 firmware with HTTP uploads
- Complete GrowSenseModule with WiFi, HTTP POST, and JSON formatting
- Dummy sensor data for testing without hardware
- Auto-retry logic with exponential backoff
- Status LED indicators and comprehensive debugging
- Modular sensor functions ready for implementation
- Instructions for adding devices to Render
- Updated firmware README with quick start guide

--- a/device_keys.json.example
+++ b/device_keys.json.example
@@ -1,6 +1,7 @@
 {
+  "test_device": "test-key-for-development",
   "esp32_device_001": "your-secret-api-key-001",
-  "esp32_device_002": "your-secret-api-key-002",
-  "test_device": "test-key-for-development"
+  "esp32_greenhouse_01": "your-secret-api-key-greenhouse",
+  "esp32_device_002": "your-secret-api-key-002"
 }
 
