--- a/firmware/GrowSenseModule/secrets.h.example
+++ b/firmware/GrowSenseModule/secrets.h.example
@@ -1,10 +1,26 @@
 #ifndef SECRETS_H
 #define SECRETS_H
 
-#define WIFI_SSID       "YourPrivateWiFi"
-#define WIFI_PASS       "YourPrivatePassword"
-#define IO_USERNAME     "YourAdafruitUsername"
-#define IO_KEY          "YourPrivateActiveKey"
+// WiFi Credentials
+#define WIFI_SSID       "YourWiFiNetworkName"
+#define WIFI_PASSWORD   "YourWiFiPassword"
+
+// GrowSense Device Credentials
+// These must match the device_keys.json on the server
+#define DEVICE_ID       "esp32_greenhouse_01"
+#define API_KEY         "your-secure-api-key-here"
+
+/*
+ * IMPORTANT: 
+ * 1. Copy this file to 'secrets.h' in the same directory
+ * 2. Fill in your actual credentials
+ * 3. Never commit secrets.h to version control
+ * 
+ * To generate a secure API key, you can use:
+ * - Online tool: https://www.uuidgenerator.net/
+ * - Command line: openssl rand -hex 32
+ * - Or any random string generator
+ */
 
 #endif
 
