--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ firebase-admin==6.3.0
 gunicorn==21.2.0
 python-dotenv==1.0.0
 flask-cors==4.0.0
+# google-generativeai  # Uncomment when implementing Gemini API integration
 
