Update gunicorn configuration in Procfile and render.yaml
- Changed the gunicorn worker configuration from 2 workers to 1 worker with 8 threads for improved performance.
- Updated the start command in render.yaml to reflect the new threading configuration.

--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     plan: free
     branch: main
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn --bind 0.0.0.0:$PORT --workers 2 --timeout 120 'app:create_app()'"
+    startCommand: "gunicorn --bind 0.0.0.0:$PORT --workers 1 --threads 8 --timeout 120 'app:create_app()'"
     healthCheckPath: /health
     envVars:
       - key: FLASK_ENV
