Clean up repo structure and remove deprecated files. Updated README.

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ device_keys.json
 firebase-credentials.json
 
 # Firmware secrets (keep secrets.h.example, ignore actual secrets.h if it has real credentials)
-firmware/GrowSenseModule/secrets.h
+firmware/**/secrets.h
 
 # IDE
 .vscode/
@@ -46,3 +46,9 @@ Thumbs.db
 
 # Logs
 *.log
+
+# Analysis outputs
+analysis_outputs/
+*.csv
+*.png
+!device_keys.json.example
