--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ gunicorn==21.2.0
 python-dotenv==1.0.0
 flask-cors==4.0.0
 google-generativeai==0.8.0
+pandas==2.2.2
+matplotlib==3.8.0
+seaborn==0.13.2
 
